@@ -1,13 +1,12 @@
 package org.opencds.cqf.fhir.utility.repository.ig;
 
-import com.google.common.io.Files;
-import java.io.File;
-import java.io.FilenameFilter;
+import jakarta.annotation.Nonnull;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.List;
 import java.util.Objects;
-import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.hl7.fhir.r4.model.Enumerations.FHIRAllTypes;
@@ -15,11 +14,17 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * This class represents the different file structures for an IG repository. The main differences between the
- * various configurations are whether or not the files are organized by resource type and/or category, and whether
- * or not the files are prefixed with the resource type.
+ * This class represents the different file structures for an IG repository. The main differences
+ * between the various configurations are whether or not the files are organized by resource type
+ * and/or category, and whether or not the files are prefixed with the resource type.
  */
-public final class IgConventions {
+public record IgConventions(
+        org.opencds.cqf.fhir.utility.repository.ig.IgConventions.FhirTypeLayout typeLayout,
+        org.opencds.cqf.fhir.utility.repository.ig.IgConventions.CategoryLayout categoryLayout,
+        org.opencds.cqf.fhir.utility.repository.ig.IgConventions.CompartmentLayout compartmentLayout,
+        org.opencds.cqf.fhir.utility.repository.ig.IgConventions.FilenameMode filenameMode) {
+
+    private static final Logger logger = LoggerFactory.getLogger(IgConventions.class);
 
     /**
      * Whether or not the files are organized by resource type.
@@ -38,9 +43,8 @@ public final class IgConventions {
     }
 
     /**
-     * Whether or not the files are organized by compartment.
-     * This is primarily used for tests to provide isolation
-     * between test cases.
+     * Whether or not the files are organized by compartment. This is primarily used for tests to
+     * provide isolation between test cases.
      */
     public enum CompartmentLayout {
         DIRECTORY_PER_COMPARTMENT,
@@ -63,66 +67,22 @@ public final class IgConventions {
             CompartmentLayout.FLAT,
             FilenameMode.ID_ONLY);
 
-    private static final Logger LOG = LoggerFactory.getLogger(IgConventions.class);
-
-    private static final Set<String> FHIR_TYPE_NAMES = Stream.of(FHIRAllTypes.values())
+    private static final List<String> FHIR_TYPE_NAMES = Stream.of(FHIRAllTypes.values())
             .map(FHIRAllTypes::name)
             .map(String::toLowerCase)
-            .collect(Collectors.toSet());
+            .distinct()
+            .toList();
 
     /**
-     * Creates new IGConventions with the given typeLayout, categoryLayout, and filenameMode.
-     *
-     * NOTE: The preferred way to create an IGConventions is to use the autoDetect method or one of the static instances, STANDARD or FLAT. The only cases where this constructor should be used is if the IG repository configuration is known ahead of time and is non-standard.
-     *
-     * @param typeLayout
-     * @param categoryLayout
-     * @param filenameMode
-     *
-     */
-    public IgConventions(
-            FhirTypeLayout typeLayout,
-            CategoryLayout categoryLayout,
-            CompartmentLayout compartmentLayout,
-            FilenameMode filenameMode) {
-        this.typeLayout = typeLayout;
-        this.categoryLayout = categoryLayout;
-        this.filenameMode = filenameMode;
-        this.compartmentLayout = compartmentLayout;
-    }
-
-    private final FhirTypeLayout typeLayout;
-    private final CategoryLayout categoryLayout;
-    private final FilenameMode filenameMode;
-    private final CompartmentLayout compartmentLayout;
-
-    FhirTypeLayout typeLayout() {
-        return typeLayout;
-    }
-
-    CategoryLayout categoryLayout() {
-        return categoryLayout;
-    }
-
-    CompartmentLayout compartmentLayout() {
-        return compartmentLayout;
-    }
-
-    FilenameMode filenameMode() {
-        return filenameMode;
-    }
-
-    /**
-     * Auto-detect the IG conventions based on the structure of the IG.
-     * If the path is null or the convention can not be reliably detected,
-     * the default configuration is returned.
+     * Auto-detect the IG conventions based on the structure of the IG. If the path is null or the
+     * convention can not be reliably detected, the default configuration is returned.
      *
      * @param path The path to the IG.
-     *
      * @return The IG conventions.
      */
     public static IgConventions autoDetect(Path path) {
-        if (path == null || !path.toFile().exists()) {
+
+        if (path == null || !Files.exists(path)) {
             return STANDARD;
         }
 
@@ -134,6 +94,7 @@ public final class IgConventions {
         //
         // Check all possible category paths and grab the first that exists,
         // or use the IG path if none exist.
+
         var categoryPath = Stream.of("tests", "vocabulary", "resources")
                 .map(path::resolve)
                 .filter(x -> x.toFile().exists())
@@ -149,7 +110,7 @@ public final class IgConventions {
             var tests = path.resolve("tests");
             // A compartment under the tests looks like a set of subdirectories
             // e.g. "input/tests/Patient", "input/tests/Practitioner"
-            // that themselvses contain subdirectories for each test case.
+            // that themselves contain subdirectories for each test case.
             // e.g. "input/tests/Patient/test1", "input/tests/Patient/test2"
             // Then within those, the structure may be flat (e.g. "input/tests/Patient/test1/123.json")
             // or grouped by type (e.g. "input/tests/Patient/test1/Patient/123.json").
@@ -163,12 +124,14 @@ public final class IgConventions {
                 var compartments = FHIR_TYPE_NAMES.stream().map(tests::resolve).filter(x -> x.toFile()
                         .exists());
 
+                final List<Path> compartmentsList = compartments.toList();
+
                 // Check if any of the potential compartment directories
                 // have subdirectories that are not FHIR types (e.g. "input/tests/Patient/test1).
-                hasCompartmentDirectory = compartments
-                        .flatMap(x -> Stream.of(x.toFile().listFiles()))
-                        .filter(File::isDirectory)
-                        .anyMatch(x -> !FHIR_TYPE_NAMES.contains(x.getName().toLowerCase()));
+                hasCompartmentDirectory = compartmentsList.stream()
+                        .flatMap(IgConventions::listFiles)
+                        .filter(Files::isDirectory)
+                        .anyMatch(IgConventions::matchesAnyResource);
             }
         }
 
@@ -181,23 +144,16 @@ public final class IgConventions {
         // or use the category directory if none exist
         var typePath = FHIR_TYPE_NAMES.stream()
                 .map(categoryPath::resolve)
-                .filter(x -> x.toFile().exists())
+                .filter(Files::exists)
                 .findFirst()
                 .orElse(categoryPath);
 
         var hasTypeDirectory = !categoryPath.equals(typePath);
 
-        // Potential resource files are files that contain a "." and have a valid FHIR file extension.
-        FilenameFilter resourceFileFilter = (dir, name) -> name.contains(".")
-                && IgRepository.FILE_EXTENSIONS.containsValue(name.toLowerCase().substring(name.lastIndexOf('.') + 1));
-        var potentialResourceFiles = typePath.toFile().listFiles(resourceFileFilter);
-
         // A file "claims" to be a FHIR resource type if its filename starts with a valid FHIR type name.
         // For files that "claim" to be a FHIR resource type, we check to see if the contents of the file
         // have a resource that matches the claimed type.
-        var hasTypeFilename = Stream.of(potentialResourceFiles)
-                .filter(file -> claimedFhirType(file) != FHIRAllTypes.NULL)
-                .anyMatch(file -> contentsMatchClaimedType(file, claimedFhirType(file)));
+        var hasTypeFilename = hasTypeFilename(typePath);
 
         var config = new IgConventions(
                 hasTypeDirectory ? FhirTypeLayout.DIRECTORY_PER_TYPE : FhirTypeLayout.FLAT,
@@ -205,29 +161,61 @@ public final class IgConventions {
                 hasCompartmentDirectory ? CompartmentLayout.DIRECTORY_PER_COMPARTMENT : CompartmentLayout.FLAT,
                 hasTypeFilename ? FilenameMode.TYPE_AND_ID : FilenameMode.ID_ONLY);
 
-        LOG.info("Auto-detected repository configuration: {}", config);
+        logger.info("Auto-detected repository configuration: {}", config);
 
         return config;
     }
 
+    private static boolean hasTypeFilename(Path typePath) {
+        try (var fileStream = Files.list(typePath)) {
+            return fileStream
+                    .filter(IgConventions::fileNameMatchesType)
+                    .filter(filePath -> claimedFhirType(filePath) != FHIRAllTypes.NULL)
+                    .anyMatch(filePath -> contentsMatchClaimedType(filePath, claimedFhirType(filePath)));
+        } catch (IOException exception) {
+            logger.error("Error listing files in path: {}", typePath, exception);
+            return false;
+        }
+    }
+
+    private static boolean fileNameMatchesType(Path innerFile) {
+        Objects.requireNonNull(innerFile);
+        var fileName = innerFile.getFileName().toString();
+        return FHIR_TYPE_NAMES.stream().anyMatch(type -> fileName.toLowerCase().startsWith(type));
+    }
+
+    private static boolean matchesAnyResource(Path innerFile) {
+        return !FHIR_TYPE_NAMES.contains(innerFile.getFileName().toString().toLowerCase());
+    }
+
+    @Nonnull
+    private static Stream<Path> listFiles(Path innerPath) {
+        try {
+            return Files.list(innerPath);
+        } catch (IOException e) {
+            logger.error("Error listing files in path: {}", innerPath, e);
+            return Stream.empty();
+        }
+    }
+
     // This method checks to see if the contents of a file match the type claimed by the filename
-    private static boolean contentsMatchClaimedType(File file, FHIRAllTypes claimedFhirType) {
-        Objects.requireNonNull(file);
+    private static boolean contentsMatchClaimedType(Path filePath, FHIRAllTypes claimedFhirType) {
+        Objects.requireNonNull(filePath);
         Objects.requireNonNull(claimedFhirType);
 
-        try {
-            var contents = Files.asCharSource(file, StandardCharsets.UTF_8).read();
-            if (contents == null || contents.isEmpty()) {
+        try (var linesStream = Files.lines(filePath, StandardCharsets.UTF_8)) {
+            var contents = linesStream.collect(Collectors.joining());
+            if (contents.isEmpty()) {
                 return false;
             }
 
-            var filename = file.getName();
+            var filename = filePath.getFileName().toString();
             var fileNameWithoutExtension = filename.substring(0, filename.lastIndexOf("."));
             // Check that the contents contain the claimed type, and that the id is not the same as the filename
             // NOTE: This does not work for XML files.
-            return contents.toUpperCase().contains(String.format("\"RESOURCETYPE\": \"%s\"", claimedFhirType.name()))
+            return contents.toUpperCase().contains("\"RESOURCETYPE\": \"%s\"".formatted(claimedFhirType.name()))
                     && !contents.toUpperCase()
-                            .contains(String.format("\"ID\": \"%s\"", fileNameWithoutExtension.toUpperCase()));
+                            .contains("\"ID\": \"%s\"".formatted(fileNameWithoutExtension.toUpperCase()));
 
         } catch (IOException e) {
             return false;
@@ -235,8 +223,8 @@ public final class IgConventions {
     }
 
     // Detects the FHIR type claimed by the filename
-    private static FHIRAllTypes claimedFhirType(File file) {
-        var filename = file.getName();
+    private static FHIRAllTypes claimedFhirType(Path filePath) {
+        var filename = filePath.getFileName().toString();
         if (!filename.contains("-")) {
             return FHIRAllTypes.NULL;
         }
@@ -250,32 +238,26 @@ public final class IgConventions {
     }
 
     @Override
+    public boolean equals(Object other) {
+        if (other == null || getClass() != other.getClass()) {
+            return false;
+        }
+        IgConventions that = (IgConventions) other;
+        return typeLayout == that.typeLayout
+                && filenameMode == that.filenameMode
+                && categoryLayout == that.categoryLayout
+                && compartmentLayout == that.compartmentLayout;
+    }
+
+    @Override
     public int hashCode() {
-        final int prime = 31;
-        int result = 1;
-        result = prime * result + ((typeLayout == null) ? 0 : typeLayout.hashCode());
-        result = prime * result + ((categoryLayout == null) ? 0 : categoryLayout.hashCode());
-        result = prime * result + ((compartmentLayout == null) ? 0 : compartmentLayout.hashCode());
-        result = prime * result + ((filenameMode == null) ? 0 : filenameMode.hashCode());
-        return result;
+        return Objects.hash(typeLayout, categoryLayout, compartmentLayout, filenameMode);
     }
 
     @Override
-    public boolean equals(Object obj) {
-        if (this == obj) return true;
-        if (obj == null) return false;
-        if (getClass() != obj.getClass()) return false;
-        IgConventions other = (IgConventions) obj;
-        if (typeLayout != other.typeLayout) return false;
-        if (categoryLayout != other.categoryLayout) return false;
-        if (compartmentLayout != other.compartmentLayout) return false;
-        return filenameMode == other.filenameMode;
-    }
-
-    @Override
+    @Nonnull
     public String toString() {
-        return String.format(
-                "IGConventions [typeLayout=%s, categoryLayout=%s compartmentLayout=%s, filenameMode=%s]",
-                typeLayout, categoryLayout, compartmentLayout, filenameMode);
+        return "IGConventions [typeLayout=%s, categoryLayout=%s compartmentLayout=%s, filenameMode=%s]"
+                .formatted(typeLayout, categoryLayout, compartmentLayout, filenameMode);
     }
 }
